[gd_scene load_steps=2 format=2]

[ext_resource path="res://Shield.gd" type="Script" id=1]

[node name="ShieldSet" type="Node2D"]
script = ExtResource( 1 )

[node name="FrontPos" type="Position2D" parent="."]
position = Vector2( -4, 1 )

[node name="UpPos" type="Position2D" parent="."]
position = Vector2( 2, -5 )

[node name="DownPos" type="Position2D" parent="."]
position = Vector2( 2, 19 )
